Second attempt at fixing overflow-y on mobile. Added align-items: flex-start to customiser button to prevent stretching

--- a/tilegame/css/boilerplate.css
+++ b/tilegame/css/boilerplate.css
@@ -38,7 +38,8 @@ button:hover {
 }
 
 @media (max-width: 450px) {
-  html {
+  body {
+    max-height: 100vh;
     overflow-y: hidden;
   }
   
